--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "app/assets/javascripts/srp"]
 	path = app/assets/javascripts/srp
-	url = https://leap.se/git/srp_js
+	url = https://github.com/Alster-Hamburgers/srp_js.git
